added logger and mocked out led rendering with debug calls

--- a/glide.yaml
+++ b/glide.yaml
@@ -8,3 +8,5 @@ import:
 - package: github.com/jgarff/rpi_ws281x
   subpackages:
   - golang/ws2811
+- package: github.com/rs/zerolog
+  version: ~1.8.0
